[gd_scene load_steps=8 format=2]

[ext_resource path="res://Gate.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/key.png" type="Texture" id=2]
[ext_resource path="res://assets/doors/portcullis.png" type="Texture" id=3]
[ext_resource path="res://assets/doors/portcullisOpen.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "open",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 167, 90.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 62.5, 80 )

[node name="Gate" type="Area2D" groups=["action_object"]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 2 )
animation = "closed"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 9.5 )
shape = SubResource( 1 )

[node name="hint" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -137 )
texture = ExtResource( 2 )

[node name="MainBody" type="StaticBody2D" parent="."]

[node name="BodyCollision" type="CollisionShape2D" parent="MainBody"]
position = Vector2( 1.5, 21 )
shape = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Gate_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Gate_body_exited"]
